@@ -684,7 +684,7 @@ if ($params['group']) {
 //		print '
 //		<input type="CHECKBOX" name="exact" value="1"'.( $exact ? ' CHECKED' : ' UNCHECKED' ).'> Require All Words';
 
-		print '</td><td>&nbsp;</td>';
+		print '</td><td>&nbsp;';
 		if ( isset($forum_id) ) {
 			print '
 			<input type="hidden" value="'.$forum_id.'" name="forum_id" />';
@@ -697,7 +697,7 @@ if ($params['group']) {
 			print '
 			<input type="hidden" value="'.$atid.'" name="atid" />';
 		}
-		print '<td>';
+		print '</td><td>';
 		print '
 		<input type="text" size="12" name="words" value="'.$words.'" />';
 
